--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   </head>
   <body>
     <div style="height: 600px; background: red;">
-      <h1 class="heading heading--h1 homepage-header__heading">Top Section</h1>
+      <h1>Top Section</h1>
     </div>
     <div id="compMemTest">compare here</div>
-    <div style="height: 1200px; background: green;"></div>
+    <div style="height: 1200px; background: green;"><h2>Bottom Section</h1></div>
     <script src="js/main.js"></script>
   </body>
 </html>
