--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Static Template</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
-      integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <!-- <link
-      rel="stylesheet"
-      href="https://www.caasco.com/styles/caa.min.css?v=637842717640000000"
-    /> -->
-  </head>
-  <body>
-    <div style="height: 600px; background: red;">
-      <h1>Top Section</h1>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Static Template</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="https://www.caasco.com/styles/caa.min.css?v=637842717640000000" />
+</head>
+
+<body>
+  <div style="height: 600px; background: #aaa;">
+    <h1>Top Section</h1>
+  </div>
+
+  <div id="compMemTest">
+    <div class="tableRow">
+      <div class="tableColumn">1</div>
+      <div class="tableColumn">2</div>
+      <div class="tableColumn">3</div>
+      <div class="tableColumn">4</div>
     </div>
-    <div id="compMemTest">compare here</div>
-    <div style="height: 1200px; background: green;"><h2>Bottom Section</h1></div>
-    <script src="js/main.js"></script>
-  </body>
+  </div>
+
+  <div style="height: 1200px; background: #aaa;">
+    <h2>Bottom Section</h1>
+  </div>
+
+  <script src="js/main.js"></script>
+</body>
+
 </html>
