--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Static Template</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="https://www.caasco.com/styles/caa.min.css?v=637842717640000000" />
 </head>
 
 <body>
@@ -17,14 +16,16 @@
     <h1>Top Section</h1>
   </div>
 
-  <div id="compMemTest">
-    <div class="tableRow">
-      <div class="tableColumn">1</div>
-      <div class="tableColumn">2</div>
-      <div class="tableColumn">3</div>
-      <div class="tableColumn">4</div>
+  <section class="compare-membership">
+    <div class="container-fluid">
+        <div class="row">
+          <div class="col-6 col-md-4 col-lg-3">1</div>
+          <div class="col-6 col-md-4 col-lg-3">2</div>
+          <div class="d-none d-md-block col-md-4 col-lg-3">3</div>
+          <div class="d-none d-lg-block col-md-4 col-lg-3 ">4</div>
+        </div>
     </div>
-  </div>
+  </section>
 
   <div style="height: 1200px; background: #aaa;">
     <h2>Bottom Section</h1>
