--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   <title>Static Template</title>
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="https://caasco.com/styles/caa.min.css?v=637842717640000000">
+  <link rel="stylesheet" href="https://caasco.com/styles/fonts.css?v=636900323160000000">
+  <link rel="stylesheet" href="https://caasco.com/styles/implementation.css?v=636911878840000000">
+  <link href="https://caasco.com/assets/css/css_fixes.css?v=636911878840000000" rel="stylesheet">
+
   <link rel="stylesheet" href="css/style.css" />
 </head>
 
@@ -17,19 +23,126 @@
   </div>
 
   <section class="compare-membership">
-    <div class="container-fluid">
-        <div class="row">
-          <div class="col-6 col-md-4 col-lg-3">1</div>
-          <div class="col-6 col-md-4 col-lg-3">2</div>
-          <div class="d-none d-md-block col-md-4 col-lg-3">3</div>
-          <div class="d-none d-lg-block col-md-4 col-lg-3 ">4</div>
+    <div class="compare-membership__top">
+      <div class="container-fluid">
+          <div class="row">
+            <div class="col-6 col-md-4 col-lg-3">col 1</div>
+            <div class="col-6 col-md-4 col-lg-3">col 2</div>
+            <div class="d-none d-md-block col-md-4 col-lg-3">col 3</div>
+            <div class="d-none d-lg-block col-md-4 col-lg-3">col 4</div>
+          </div>
+      </div>
+    </div>
+
+
+
+
+
+    <div class="accordion">
+      <div class="container-fluid">
+        <div class="accordion__content  accordion__content--borderless">
+          <div class="row">
+            <div class="col-sm-12  accordion__section-container" role="tablist" multiselectable="true">
+
+              <div class="accordion__section  accordion__section--open-ends  accordion__section--open">
+                <a class="accordion__link-title  accordion__link-title--active" href="#" aria-selected="false"
+                  aria-expanded="true" aria-controls="panel" role="tab">
+                  Membership services
+                  <svg class="plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                    <rect x="9" class="st0" width="2" height="20"></rect>
+                    <rect x="9" transform="rotate(90 10 10)" class="st0" width="2" height="20"></rect>
+                  </svg>
+                </a>
+                <div
+                  class="accordion__content-container  accordion__content-container--full  accordion__content-container--open-ends  accordion__content-container--visible">
+                  <div class="accordion__complex-row">
+                    <div class="row">
+                      <div class="col-6 col-md-4 col-lg-3 rich-text">
+                        <p>col 1</p>
+                      </div>
+                      <div class="col-6 col-md-4 col-lg-3 rich-text">
+                        <p>col 2</p>
+                      </div>
+                      <div class="d-none d-md-block col-md-4 col-lg-3 rich-text">
+                        <p>col 3</p>
+                      </div><div class="d-none d-lg-block col-md-4 col-lg-3">
+                        <p>col 4</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion__section  accordion__section--open-ends ">
+                <a class="accordion__link-title " href="#" aria-selected="false" aria-expanded="false" aria-controls="panel"
+                  role="tab">
+                  Automotive services
+                  <svg class="plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                    <rect x="9" class="st0" width="2" height="20"></rect>
+                    <rect x="9" transform="rotate(90 10 10)" class="st0" width="2" height="20"></rect>
+                  </svg>
+                </a>
+                <div
+                  class="accordion__content-container  accordion__content-container--full  accordion__content-container--open-ends ">
+                  <div class="accordion__complex-row">
+                    <div class="row">
+                      <div class="col-6 col-md-4 col-lg-3 rich-text">
+                        <p>col 1</p>
+                      </div>
+                      <div class="col-6 col-md-4 col-lg-3 rich-text">
+                        <p>col 2</p>
+                      </div>
+                      <div class="d-none d-md-block col-md-4 col-lg-3 rich-text">
+                        <p>col 3</p>
+                      </div>
+                      <div class="d-none d-lg-block col-md-4 col-lg-3">
+                        <p>col 4</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion__section  accordion__section--open-ends ">
+                <a class="accordion__link-title " href="#" aria-selected="false" aria-expanded="false" aria-controls="panel"
+                  role="tab">
+                  Insurance services
+                  <svg class="plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                    <rect x="9" class="st0" width="2" height="20"></rect>
+                    <rect x="9" transform="rotate(90 10 10)" class="st0" width="2" height="20"></rect>
+                  </svg>
+                </a>
+                <div
+                  class="accordion__content-container  accordion__content-container--full  accordion__content-container--open-ends ">
+                  <div class="accordion__complex-row">
+                    <div class="row">
+                      <div class="col-6 col-md-4 col-lg-3 rich-text">
+                        <p>col 1</p>
+                      </div>
+                      <div class="col-6 col-md-4 col-lg-3 rich-text">
+                        <p>col 2</p>
+                      </div>
+                      <div class="d-none d-md-block col-md-4 col-lg-3 rich-text">
+                        <p>col 3</p>
+                      </div>
+                      <div class="d-none d-lg-block col-md-4 col-lg-3">
+                        <p>col 4</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
   </section>
 
   <div style="height: 1200px; background: #aaa;">
     <h2>Bottom Section</h1>
   </div>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://caasco.com/scripts/scripts.min.js?v=637842717640000000"></script>
 
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
