card info section

--- a/index.html
+++ b/index.html
@@ -25,12 +25,42 @@
   <section class="compare-membership">
     <div class="compare-membership__top">
       <div class="container-fluid">
-          <div class="row">
-            <div class="col-6 col-md-4 col-lg-3">col 1</div>
-            <div class="col-6 col-md-4 col-lg-3">col 2</div>
-            <div class="d-none d-md-block col-md-4 col-lg-3">col 3</div>
-            <div class="d-none d-lg-block col-md-4 col-lg-3">col 4</div>
+        <div class="row">
+          <div class="d-none d-lg-block col-6 col-md-4 col-lg-3">
+            <p class="membership-card__heading"></p>
+            <div class="membership-card__price"><span>$</span>/year</div>
+            <img class="membership-card__card-image card-image" src="" alt="CAA A La Carte Membership Card">
+            <div class="compare-cards__cta-container">
+              <a id="compare-cards__cta--basic" href="Call 1-877-475-5061" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships">Call 1-877-475-5061</a>
+            </div>
           </div>
+          <div class="col-6 col-md-4 col-lg-3">
+            <p class="membership-card__heading"></p>
+            <div class="membership-card__price"><span>$</span>/year</div>
+            <img class="membership-card__card-image card-image" src="" alt="CAA Basic Membership Card">
+            <div class="compare-cards__cta-container">
+              <a id="compare-cards__cta--basic" href="/membership/Join?Type=Basic" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships">Join Now</a>
+            </div>
+          </div>
+          <div class="col-6 col-md-4 col-lg-3">
+            <p class="membership-card__heading"></p>
+            <div class="membership-card__price"><span>$</span>/year</div>
+            <img class="membership-card__card-image card-image" src="" alt="CAA Plus Membership Card">
+            <div class="compare-cards__cta-container">
+              <a id="compare-cards__cta--basic" href="/membership/Join?Type=Basic" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships">Join Now</a>
+            </div>
+          </div>
+          <div class="d-none d-md-block col-6 col-md-4 col-lg-3">
+            <p class="membership-card__heading"></p>
+            <div class="membership-card__price"><span>$</span>/year</div>
+            <img class="membership-card__card-image card-image" src="" alt="CAA Premier Membership Card">
+            <div class="compare-cards__cta-container">
+              <a id="compare-cards__cta--basic" href="/membership/Join?Type=Basic" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships">Join Now</a>
+            </div>
+          </div>
+          <!-- <div class="d-none d-md-block col-md-4 col-lg-3">col 3</div>
+          <div class="d-none d-lg-block col-md-4 col-lg-3">col 4</div> -->
+        </div>
       </div>
     </div>
 
@@ -145,7 +175,7 @@
   <script src="https://caasco.com/scripts/scripts.min.js?v=637842717640000000"></script>
 
   <script src="js/data.js" defer></script>
-  <script src="js/main.js"></script>
+  <script src="js/main.js" defer></script>
 </body>
 
 </html>
