--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
         <div class="accordion__content  accordion__content--borderless">
           <div class="row">
             <div class="col-sm-12  accordion__section-container" role="tablist" multiselectable="true">
-
               <div class="accordion__section  accordion__section--open-ends  accordion__section--open">
                 <a class="accordion__link-title  accordion__link-title--active" href="#" aria-selected="false"
                   aria-expanded="true" aria-controls="panel" role="tab">
@@ -83,36 +82,7 @@
                     <rect x="9" transform="rotate(90 10 10)" class="st0" width="2" height="20"></rect>
                   </svg>
                 </a>
-                <div
-                  class="accordion__content-container  accordion__content-container--full  accordion__content-container--open-ends  accordion__content-container--visible">
-                  <div class="accordion__complex-row">
-                    <div class="row">
-                      <div class="col-6 col-md-4 col-lg-3 rich-text">
-                        <p>col 1</p>
-                      </div>
-                      <div class="col-6 col-md-4 col-lg-3 rich-text">
-                        <p>col 2</p>
-                      </div>
-                      <div class="d-none d-md-block col-md-4 col-lg-3 rich-text">
-                        <p>col 3</p>
-                      </div><div class="d-none d-lg-block col-md-4 col-lg-3">
-                        <p>col 4</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="accordion__section  accordion__section--open-ends ">
-                <a class="accordion__link-title " href="#" aria-selected="false" aria-expanded="false" aria-controls="panel"
-                  role="tab">
-                  Automotive services
-                  <svg class="plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
-                    <rect x="9" class="st0" width="2" height="20"></rect>
-                    <rect x="9" transform="rotate(90 10 10)" class="st0" width="2" height="20"></rect>
-                  </svg>
-                </a>
-                <div
-                  class="accordion__content-container  accordion__content-container--full  accordion__content-container--open-ends ">
+                <div class="accordion__content-container  accordion__content-container--full  accordion__content-container--open-ends  accordion__content-container--visible">
                   <div class="accordion__complex-row">
                     <div class="row">
                       <div class="col-6 col-md-4 col-lg-3 rich-text">
@@ -131,17 +101,44 @@
                   </div>
                 </div>
               </div>
-              <div class="accordion__section  accordion__section--open-ends ">
-                <a class="accordion__link-title " href="#" aria-selected="false" aria-expanded="false" aria-controls="panel"
-                  role="tab">
+              <div class="accordion__section  accordion__section--open-ends">
+                <a class="accordion__link-title" href="#" aria-selected="false" aria-expanded="false"
+                  aria-controls="panel" role="tab">
+                  Automotive services
+                  <svg class="plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
+                    <rect x="9" class="st0" width="2" height="20"></rect>
+                    <rect x="9" transform="rotate(90 10 10)" class="st0" width="2" height="20"></rect>
+                  </svg>
+                </a>
+                <div class="accordion__content-container  accordion__content-container--full  accordion__content-container--open-ends">
+                  <div class="accordion__complex-row">
+                    <div class="row">
+                      <div class="col-6 col-md-4 col-lg-3 rich-text">
+                        <p>col 1</p>
+                      </div>
+                      <div class="col-6 col-md-4 col-lg-3 rich-text">
+                        <p>col 2</p>
+                      </div>
+                      <div class="d-none d-md-block col-md-4 col-lg-3 rich-text">
+                        <p>col 3</p>
+                      </div>
+                      <div class="d-none d-lg-block col-md-4 col-lg-3">
+                        <p>col 4</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion__section  accordion__section--open-ends">
+                <a class="accordion__link-title" href="#" aria-selected="false" aria-expanded="false"
+                  aria-controls="panel" role="tab">
                   Insurance services
                   <svg class="plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
                     <rect x="9" class="st0" width="2" height="20"></rect>
                     <rect x="9" transform="rotate(90 10 10)" class="st0" width="2" height="20"></rect>
                   </svg>
                 </a>
-                <div
-                  class="accordion__content-container  accordion__content-container--full  accordion__content-container--open-ends ">
+                <div class="accordion__content-container  accordion__content-container--full  accordion__content-container--open-ends">
                   <div class="accordion__complex-row">
                     <div class="row">
                       <div class="col-6 col-md-4 col-lg-3 rich-text">
