updating accordion title | refactoring

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <div class="accordion__section  accordion__section--open-ends  accordion__section--open">
                 <a class="accordion__link-title  accordion__link-title--active" href="#" aria-selected="false"
                   aria-expanded="true" aria-controls="panel" role="tab">
-                  Membership services
+                  Roadside Coverage
                   <svg class="plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
                     <rect x="9" class="st0" width="2" height="20"></rect>
                     <rect x="9" transform="rotate(90 10 10)" class="st0" width="2" height="20"></rect>
@@ -104,7 +104,7 @@
               <div class="accordion__section  accordion__section--open-ends">
                 <a class="accordion__link-title" href="#" aria-selected="false" aria-expanded="false"
                   aria-controls="panel" role="tab">
-                  Automotive services
+                  Savings and Discounts on Retail and Travel
                   <svg class="plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
                     <rect x="9" class="st0" width="2" height="20"></rect>
                     <rect x="9" transform="rotate(90 10 10)" class="st0" width="2" height="20"></rect>
@@ -132,7 +132,7 @@
               <div class="accordion__section  accordion__section--open-ends">
                 <a class="accordion__link-title" href="#" aria-selected="false" aria-expanded="false"
                   aria-controls="panel" role="tab">
-                  Insurance services
+                  Additional Exclusive Benefits
                   <svg class="plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
                     <rect x="9" class="st0" width="2" height="20"></rect>
                     <rect x="9" transform="rotate(90 10 10)" class="st0" width="2" height="20"></rect>
