adding responsive card selector | data update | populating accordion data

--- a/index.html
+++ b/index.html
@@ -27,33 +27,105 @@
       <div class="container-fluid">
         <div class="row">
           <div class="d-none d-lg-block col-6 col-md-4 col-lg-3">
-            <p class="membership-card__heading"></p>
+            <div class="input__select d-lg-none">
+              <!-- <label class="label" for="radius-search">Search Radius</label> -->
+              <div class="input__select-container">
+                <select name="radius-search" id="radius-search" data-parsley-min="1" data-parsley-required=""
+                  data-parsley-min-message="Please select a search radius.">
+                  <option value="0" selected="selected">Select Radius</option>
+                  <option value="10">
+                    10km
+                  </option>
+                  <option value="25">
+                    25km
+                  </option>
+                  <option value="50">
+                    50km
+                  </option>
+                </select>
+              </div>
+            </div>
+            <p class=" membership-card__heading d-none d-lg-block"></p>
             <div class="membership-card__price"><span>$</span>/year</div>
-            <img class="membership-card__card-image card-image" src="" alt="CAA A La Carte Membership Card">
+            <img class="membership-card__card-image card-image" src= "-" alt="CAA A La Carte Membership Card">
             <div class="compare-cards__cta-container">
               <a id="compare-cards__cta--basic" href="Call 1-877-475-5061" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships">Call 1-877-475-5061</a>
             </div>
           </div>
           <div class="col-6 col-md-4 col-lg-3">
-            <p class="membership-card__heading"></p>
+            <div class="input__select d-lg-none">
+              <!-- <label class="label" for="radius-search">Search Radius</label> -->
+              <div class="input__select-container">
+                <select name="radius-search" id="radius-search" data-parsley-min="1" data-parsley-required=""
+                  data-parsley-min-message="Please select a search radius.">
+                  <option value="0" selected="selected">Select Radius</option>
+                  <option value="10">
+                    10km
+                  </option>
+                  <option value="25">
+                    25km
+                  </option>
+                  <option value="50">
+                    50km
+                  </option>
+                </select>
+              </div>
+            </div>
+            <p class=" membership-card__heading d-none d-lg-block"></p>
             <div class="membership-card__price"><span>$</span>/year</div>
-            <img class="membership-card__card-image card-image" src="" alt="CAA Basic Membership Card">
+            <img class="membership-card__card-image card-image" src= "-" alt="CAA Basic Membership Card">
             <div class="compare-cards__cta-container">
               <a id="compare-cards__cta--basic" href="/membership/Join?Type=Basic" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships">Join Now</a>
             </div>
           </div>
           <div class="col-6 col-md-4 col-lg-3">
-            <p class="membership-card__heading"></p>
+            <div class="input__select d-lg-none">
+              <!-- <label class="label" for="radius-search">Search Radius</label> -->
+              <div class="input__select-container">
+                <select name="radius-search" id="radius-search" data-parsley-min="1" data-parsley-required=""
+                  data-parsley-min-message="Please select a search radius.">
+                  <option value="0" selected="selected">Select Radius</option>
+                  <option value="10">
+                    10km
+                  </option>
+                  <option value="25">
+                    25km
+                  </option>
+                  <option value="50">
+                    50km
+                  </option>
+                </select>
+              </div>
+            </div>
+            <p class=" membership-card__heading d-none d-lg-block"></p>
             <div class="membership-card__price"><span>$</span>/year</div>
-            <img class="membership-card__card-image card-image" src="" alt="CAA Plus Membership Card">
+            <img class="membership-card__card-image card-image" src= "-" alt="CAA Plus Membership Card">
             <div class="compare-cards__cta-container">
               <a id="compare-cards__cta--basic" href="/membership/Join?Type=Basic" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships">Join Now</a>
             </div>
           </div>
           <div class="d-none d-md-block col-6 col-md-4 col-lg-3">
-            <p class="membership-card__heading"></p>
+            <div class="input__select d-lg-none">
+              <!-- <label class="label" for="radius-search">Search Radius</label> -->
+              <div class="input__select-container">
+                <select name="radius-search" id="radius-search" data-parsley-min="1" data-parsley-required=""
+                  data-parsley-min-message="Please select a search radius.">
+                  <option value="0" selected="selected">Select Radius</option>
+                  <option value="10">
+                    10km
+                  </option>
+                  <option value="25">
+                    25km
+                  </option>
+                  <option value="50">
+                    50km
+                  </option>
+                </select>
+              </div>
+            </div>
+            <p class=" membership-card__heading d-none d-lg-block"></p>
             <div class="membership-card__price"><span>$</span>/year</div>
-            <img class="membership-card__card-image card-image" src="" alt="CAA Premier Membership Card">
+            <img class="membership-card__card-image card-image" src= "-" alt="CAA Premier Membership Card">
             <div class="compare-cards__cta-container">
               <a id="compare-cards__cta--basic" href="/membership/Join?Type=Basic" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships">Join Now</a>
             </div>
@@ -64,17 +136,13 @@
       </div>
     </div>
 
-
-
-
-
     <div class="accordion">
       <div class="container-fluid">
-        <div class="accordion__content  accordion__content--borderless">
+        <div class="accordion__content accordion__content--borderless">
           <div class="row">
-            <div class="col-sm-12  accordion__section-container" role="tablist" multiselectable="true">
-              <div class="accordion__section  accordion__section--open-ends  accordion__section--open">
-                <a class="accordion__link-title  accordion__link-title--active" href="#" aria-selected="false"
+            <div class="col-sm-12 accordion__section-container" role="tablist" multiselectable="true">
+              <div class="accordion__section accordion__section--open-ends accordion__section--open">
+                <a class="accordion__link-title accordion__link-title--active" href="#" aria-selected="false"
                   aria-expanded="true" aria-controls="panel" role="tab">
                   Roadside Coverage
                   <svg class="plus" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
@@ -82,26 +150,26 @@
                     <rect x="9" transform="rotate(90 10 10)" class="st0" width="2" height="20"></rect>
                   </svg>
                 </a>
-                <div class="accordion__content-container  accordion__content-container--full  accordion__content-container--open-ends  accordion__content-container--visible">
+                <div class="roadside accordion__content-container accordion__content-container--full accordion__content-container--open-ends accordion__content-container--visible">
                   <div class="accordion__complex-row">
                     <div class="row">
-                      <div class="col-6 col-md-4 col-lg-3 rich-text">
+                      <div class="aLaCarte col-6 col-md-4 col-lg-3 rich-text">
                         <p>col 1</p>
                       </div>
-                      <div class="col-6 col-md-4 col-lg-3 rich-text">
+                      <div class="basic col-6 col-md-4 col-lg-3 rich-text">
                         <p>col 2</p>
                       </div>
-                      <div class="d-none d-md-block col-md-4 col-lg-3 rich-text">
+                      <div class="plus d-none d-md-block col-md-4 col-lg-3 rich-text">
                         <p>col 3</p>
                       </div>
-                      <div class="d-none d-lg-block col-md-4 col-lg-3">
+                      <div class="premier d-none d-lg-block col-md-4 col-lg-3">
                         <p>col 4</p>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="accordion__section  accordion__section--open-ends">
+              <div class="accordion__section accordion__section--open-ends">
                 <a class="accordion__link-title" href="#" aria-selected="false" aria-expanded="false"
                   aria-controls="panel" role="tab">
                   Savings and Discounts on Retail and Travel
@@ -110,26 +178,26 @@
                     <rect x="9" transform="rotate(90 10 10)" class="st0" width="2" height="20"></rect>
                   </svg>
                 </a>
-                <div class="accordion__content-container  accordion__content-container--full  accordion__content-container--open-ends">
+                <div class="savings accordion__content-container accordion__content-container--full accordion__content-container--open-ends">
                   <div class="accordion__complex-row">
                     <div class="row">
-                      <div class="col-6 col-md-4 col-lg-3 rich-text">
+                      <div class="aLaCarte col-6 col-md-4 col-lg-3 rich-text">
                         <p>col 1</p>
                       </div>
-                      <div class="col-6 col-md-4 col-lg-3 rich-text">
+                      <div class="basic col-6 col-md-4 col-lg-3 rich-text">
                         <p>col 2</p>
                       </div>
-                      <div class="d-none d-md-block col-md-4 col-lg-3 rich-text">
+                      <div class="plus d-none d-md-block col-md-4 col-lg-3 rich-text">
                         <p>col 3</p>
                       </div>
-                      <div class="d-none d-lg-block col-md-4 col-lg-3">
+                      <div class="premier d-none d-lg-block col-md-4 col-lg-3">
                         <p>col 4</p>
                       </div>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="accordion__section  accordion__section--open-ends">
+              <div class="accordion__section accordion__section--open-ends">
                 <a class="accordion__link-title" href="#" aria-selected="false" aria-expanded="false"
                   aria-controls="panel" role="tab">
                   Additional Exclusive Benefits
@@ -138,19 +206,19 @@
                     <rect x="9" transform="rotate(90 10 10)" class="st0" width="2" height="20"></rect>
                   </svg>
                 </a>
-                <div class="accordion__content-container  accordion__content-container--full  accordion__content-container--open-ends">
+                <div class="benefits accordion__content-container accordion__content-container--full accordion__content-container--open-ends">
                   <div class="accordion__complex-row">
                     <div class="row">
-                      <div class="col-6 col-md-4 col-lg-3 rich-text">
+                      <div class="aLaCarte col-6 col-md-4 col-lg-3 rich-text">
                         <p>col 1</p>
                       </div>
-                      <div class="col-6 col-md-4 col-lg-3 rich-text">
+                      <div class="basic col-6 col-md-4 col-lg-3 rich-text">
                         <p>col 2</p>
                       </div>
-                      <div class="d-none d-md-block col-md-4 col-lg-3 rich-text">
+                      <div class="plus d-none d-md-block col-md-4 col-lg-3 rich-text">
                         <p>col 3</p>
                       </div>
-                      <div class="d-none d-lg-block col-md-4 col-lg-3">
+                      <div class="premier d-none d-lg-block col-md-4 col-lg-3">
                         <p>col 4</p>
                       </div>
                     </div>
