cta label | data update

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="membership-card__price"><span>$</span>/year</div>
             <img class="membership-card__card-image card-image" src= "-" alt="CAA A La Carte Membership Card">
             <div class="compare-cards__cta-container">
-              <a id="compare-cards__cta--basic" href="Call 1-877-475-5061" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships">Call 1-877-475-5061</a>
+              <a id="compare-cards__cta--basic" href="Call 1-877-475-5061" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships"></a>
             </div>
           </div>
           <div class="col-6 col-md-4 col-lg-3">
@@ -75,7 +75,7 @@
             <div class="membership-card__price"><span>$</span>/year</div>
             <img class="membership-card__card-image card-image" src= "-" alt="CAA Basic Membership Card">
             <div class="compare-cards__cta-container">
-              <a id="compare-cards__cta--basic" href="/membership/Join?Type=Basic" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships">Join Now</a>
+              <a id="compare-cards__cta--basic" href="/membership/Join?Type=Basic" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships"></a>
             </div>
           </div>
           <div class="col-6 col-md-4 col-lg-3">
@@ -101,7 +101,7 @@
             <div class="membership-card__price"><span>$</span>/year</div>
             <img class="membership-card__card-image card-image" src= "-" alt="CAA Plus Membership Card">
             <div class="compare-cards__cta-container">
-              <a id="compare-cards__cta--basic" href="/membership/Join?Type=Basic" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships">Join Now</a>
+              <a id="compare-cards__cta--basic" href="/membership/Join?Type=Basic" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships"></a>
             </div>
           </div>
           <div class="d-none d-md-block col-6 col-md-4 col-lg-3">
@@ -127,7 +127,7 @@
             <div class="membership-card__price"><span>$</span>/year</div>
             <img class="membership-card__card-image card-image" src= "-" alt="CAA Premier Membership Card">
             <div class="compare-cards__cta-container">
-              <a id="compare-cards__cta--basic" href="/membership/Join?Type=Basic" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships">Join Now</a>
+              <a id="compare-cards__cta--basic" href="/membership/Join?Type=Basic" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships"></a>
             </div>
           </div>
           <!-- <div class="d-none d-md-block col-md-4 col-lg-3">col 3</div>
