rendering row parity

--- a/index.html
+++ b/index.html
@@ -151,22 +151,7 @@
                   </svg>
                 </a>
                 <div class="roadside accordion__content-container accordion__content-container--full accordion__content-container--open-ends accordion__content-container--visible">
-                  <div class="accordion__complex-row">
-                    <div class="row">
-                      <div class="aLaCarte col-6 col-md-4 col-lg-3 rich-text">
-                        <p>col 1</p>
-                      </div>
-                      <div class="basic col-6 col-md-4 col-lg-3 rich-text">
-                        <p>col 2</p>
-                      </div>
-                      <div class="plus d-none d-md-block col-md-4 col-lg-3 rich-text">
-                        <p>col 3</p>
-                      </div>
-                      <div class="premier d-none d-lg-block col-md-4 col-lg-3">
-                        <p>col 4</p>
-                      </div>
-                    </div>
-                  </div>
+                  <div class="accordion__complex-row"></div>
                 </div>
               </div>
               <div class="accordion__section accordion__section--open-ends">
@@ -179,22 +164,7 @@
                   </svg>
                 </a>
                 <div class="savings accordion__content-container accordion__content-container--full accordion__content-container--open-ends">
-                  <div class="accordion__complex-row">
-                    <div class="row">
-                      <div class="aLaCarte col-6 col-md-4 col-lg-3 rich-text">
-                        <p>col 1</p>
-                      </div>
-                      <div class="basic col-6 col-md-4 col-lg-3 rich-text">
-                        <p>col 2</p>
-                      </div>
-                      <div class="plus d-none d-md-block col-md-4 col-lg-3 rich-text">
-                        <p>col 3</p>
-                      </div>
-                      <div class="premier d-none d-lg-block col-md-4 col-lg-3">
-                        <p>col 4</p>
-                      </div>
-                    </div>
-                  </div>
+                  <div class="accordion__complex-row"></div>
                 </div>
               </div>
               <div class="accordion__section accordion__section--open-ends">
@@ -207,22 +177,7 @@
                   </svg>
                 </a>
                 <div class="benefits accordion__content-container accordion__content-container--full accordion__content-container--open-ends">
-                  <div class="accordion__complex-row">
-                    <div class="row">
-                      <div class="aLaCarte col-6 col-md-4 col-lg-3 rich-text">
-                        <p>col 1</p>
-                      </div>
-                      <div class="basic col-6 col-md-4 col-lg-3 rich-text">
-                        <p>col 2</p>
-                      </div>
-                      <div class="plus d-none d-md-block col-md-4 col-lg-3 rich-text">
-                        <p>col 3</p>
-                      </div>
-                      <div class="premier d-none d-lg-block col-md-4 col-lg-3">
-                        <p>col 4</p>
-                      </div>
-                    </div>
-                  </div>
+                  <div class="accordion__complex-row"></div>
                 </div>
               </div>
             </div>
