further accordion styling

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="accordion__content accordion__content--borderless">
           <div class="row">
             <div class="col-sm-12 accordion__section-container" role="tablist" multiselectable="true">
-              <div class="accordion__section accordion__section--open-ends accordion__section--open">
+              <div class="compare accordion__section accordion__section--open-ends accordion__section--open">
                 <a class="accordion__link-title accordion__link-title--active" href="#" aria-selected="false"
                   aria-expanded="true" aria-controls="panel" role="tab">
                   Roadside Coverage
@@ -154,7 +154,7 @@
                   <div class="accordion__complex-row"></div>
                 </div>
               </div>
-              <div class="accordion__section accordion__section--open-ends">
+              <div class="compare accordion__section accordion__section--open-ends">
                 <a class="accordion__link-title" href="#" aria-selected="false" aria-expanded="false"
                   aria-controls="panel" role="tab">
                   Savings and Discounts on Retail and Travel
@@ -167,7 +167,7 @@
                   <div class="accordion__complex-row"></div>
                 </div>
               </div>
-              <div class="accordion__section accordion__section--open-ends">
+              <div class="compare accordion__section accordion__section--open-ends">
                 <a class="accordion__link-title" href="#" aria-selected="false" aria-expanded="false"
                   aria-controls="panel" role="tab">
                   Additional Exclusive Benefits
