select box option updates

--- a/index.html
+++ b/index.html
@@ -30,18 +30,9 @@
             <div class="input__select d-lg-none">
               <!-- <label class="label" for="radius-search">Search Radius</label> -->
               <div class="input__select-container">
-                <select name="radius-search" id="radius-search" data-parsley-min="1" data-parsley-required=""
-                  data-parsley-min-message="Please select a search radius.">
-                  <option value="0" selected="selected">Select Radius</option>
-                  <option value="10">
-                    10km
-                  </option>
-                  <option value="25">
-                    25km
-                  </option>
-                  <option value="50">
-                    50km
-                  </option>
+                <select id="aLaCarteSelectBox">
+                  <option value="aLaCarte" selected="selected">A La Carte</option>
+                  <option value="aLaCarte">A La Carte</option>
                 </select>
               </div>
             </div>
@@ -56,18 +47,9 @@
             <div class="input__select d-lg-none">
               <!-- <label class="label" for="radius-search">Search Radius</label> -->
               <div class="input__select-container">
-                <select name="radius-search" id="radius-search" data-parsley-min="1" data-parsley-required=""
-                  data-parsley-min-message="Please select a search radius.">
-                  <option value="0" selected="selected">Select Radius</option>
-                  <option value="10">
-                    10km
-                  </option>
-                  <option value="25">
-                    25km
-                  </option>
-                  <option value="50">
-                    50km
-                  </option>
+                <select id="basicSelectBox">
+                  <option value="basic" selected="selected">Basic</option>
+                  <option value="aLaCarte">A La Carte</option>
                 </select>
               </div>
             </div>
@@ -82,18 +64,9 @@
             <div class="input__select d-lg-none">
               <!-- <label class="label" for="radius-search">Search Radius</label> -->
               <div class="input__select-container">
-                <select name="radius-search" id="radius-search" data-parsley-min="1" data-parsley-required=""
-                  data-parsley-min-message="Please select a search radius.">
-                  <option value="0" selected="selected">Select Radius</option>
-                  <option value="10">
-                    10km
-                  </option>
-                  <option value="25">
-                    25km
-                  </option>
-                  <option value="50">
-                    50km
-                  </option>
+                <select id="plusSelectBox">
+                  <option value="plus" selected="selected">Plus</option>
+                  <option value="aLaCarte">A La Carte</option>
                 </select>
               </div>
             </div>
@@ -108,18 +81,9 @@
             <div class="input__select d-lg-none">
               <!-- <label class="label" for="radius-search">Search Radius</label> -->
               <div class="input__select-container">
-                <select name="radius-search" id="radius-search" data-parsley-min="1" data-parsley-required=""
-                  data-parsley-min-message="Please select a search radius.">
-                  <option value="0" selected="selected">Select Radius</option>
-                  <option value="10">
-                    10km
-                  </option>
-                  <option value="25">
-                    25km
-                  </option>
-                  <option value="50">
-                    50km
-                  </option>
+                <select id="plusSelectBox">
+                  <option value="premier" selected="selected">Premier</option>
+                  <option value="aLaCarte">A La Carte</option>
                 </select>
               </div>
             </div>
