html UI elements

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <div class="container-fluid">
         <div class="row">
           <div class="d-none d-lg-block col-6 col-md-4 col-lg-3">
-            <div class="input__select d-lg-none">
-              <!-- <label class="label" for="radius-search">Search Radius</label> -->
+            <div class="input__select">
+            <!-- <div class="input__select d-lg-none"> -->
               <div class="input__select-container">
                 <select id="aLaCarteSelectBox">
                   <option value="aLaCarte" selected="selected">A La Carte</option>
@@ -44,8 +44,8 @@
             </div>
           </div>
           <div class="col-6 col-md-4 col-lg-3">
-            <div class="input__select d-lg-none">
-              <!-- <label class="label" for="radius-search">Search Radius</label> -->
+            <div class="input__select">
+              <!-- <div class="input__select d-lg-none"> -->
               <div class="input__select-container">
                 <select id="basicSelectBox">
                   <option value="basic" selected="selected">Basic</option>
@@ -61,8 +61,8 @@
             </div>
           </div>
           <div class="col-6 col-md-4 col-lg-3">
-            <div class="input__select d-lg-none">
-              <!-- <label class="label" for="radius-search">Search Radius</label> -->
+            <div class="input__select">
+            <!-- <div class="input__select d-lg-none"> -->
               <div class="input__select-container">
                 <select id="plusSelectBox">
                   <option value="plus" selected="selected">Plus</option>
@@ -70,16 +70,21 @@
                 </select>
               </div>
             </div>
+            <div class="rounded text-center p-1 bg-primary text-white">Best Value</div>
             <p class=" membership-card__heading d-none d-lg-block"></p>
             <div class="membership-card__price"><span>$</span>/year</div>
             <img class="membership-card__card-image card-image" src= "-" alt="CAA Plus Membership Card">
             <div class="compare-cards__cta-container">
               <a id="compare-cards__cta--basic" href="/membership/Join?Type=Basic" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships"></a>
             </div>
+            <div>
+              <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+              <label for="vehicle1">RV option for $67/year more</label>
+            </div>
           </div>
           <div class="d-none d-md-block col-6 col-md-4 col-lg-3">
-            <div class="input__select d-lg-none">
-              <!-- <label class="label" for="radius-search">Search Radius</label> -->
+            <div class="input__select">
+              <!-- <div class="input__select d-lg-none"> -->
               <div class="input__select-container">
                 <select id="plusSelectBox">
                   <option value="premier" selected="selected">Premier</option>
@@ -93,9 +98,11 @@
             <div class="compare-cards__cta-container">
               <a id="compare-cards__cta--basic" href="/membership/Join?Type=Basic" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships"></a>
             </div>
+            <div>
+              <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
+              <label for="vehicle1">RV option for $62/year more</label>
+            </div>
           </div>
-          <!-- <div class="d-none d-md-block col-md-4 col-lg-3">col 3</div>
-          <div class="d-none d-lg-block col-md-4 col-lg-3">col 4</div> -->
         </div>
       </div>
     </div>
