updating comments | adding select box option value

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="input__select">
               <!-- <div class="input__select d-lg-none"> -->
               <div class="input__select-container">
-                <select id="plusSelectBox">
+                <select id="premierSelectBox">
                   <option value="premier" selected="selected">Premier</option>
                   <option value="aLaCarte">A La Carte</option>
                 </select>
