--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Static Template</title>
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
   <link rel="stylesheet" href="https://caasco.com/styles/caa.min.css?v=637842717640000000">
   <link rel="stylesheet" href="https://caasco.com/styles/fonts.css?v=636900323160000000">
@@ -27,55 +28,71 @@
       <div class="container-fluid">
         <div class="row">
           <div class="d-none d-lg-block col-6 col-md-4 col-lg-3">
-            <div class="input__select">
-            <!-- <div class="input__select d-lg-none"> -->
+            <div class="input__select d-lg-none">
               <div class="input__select-container">
                 <select id="aLaCarteSelectBox">
                   <option value="aLaCarte" selected="selected">A La Carte</option>
-                  <option value="aLaCarte">A La Carte</option>
+                  <option value="basic" class="d-none" disabled="true" hidden="true" aria-hidden="true">
+                    Basic</option>
+                  <option value="plus" class="d-none" disabled="true" hidden="true" aria-hidden="true">Plus
+                  </option>
+                  <option value="premier" class="d-none" disabled="true" hidden="true"
+                    aria-hidden="true">Premier</option>
                 </select>
               </div>
             </div>
             <p class=" membership-card__heading d-none d-lg-block"></p>
             <div class="membership-card__price"><span>$</span>/year</div>
-            <img class="membership-card__card-image card-image" src= "-" alt="CAA A La Carte Membership Card">
+            <img class="membership-card__card-image card-image" src="-" alt="CAA A La Carte Membership Card">
             <div class="compare-cards__cta-container">
-              <a id="compare-cards__cta--basic" href="Call 1-877-475-5061" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships"></a>
+              <a id="compare-cards__cta--basic" href="Call 1-877-475-5061" data-gtm-cta-position="Compare Card - 1"
+                class="button button--primary compare-cards__cta"
+                data-gtm-cta-name="Join Now--/membership/compare-memberships"></a>
             </div>
           </div>
           <div class="col-6 col-md-4 col-lg-3">
-            <div class="input__select">
-              <!-- <div class="input__select d-lg-none"> -->
+            <div class="input__select d-lg-none">
               <div class="input__select-container">
                 <select id="basicSelectBox">
-                  <option value="basic" selected="selected">Basic</option>
                   <option value="aLaCarte">A La Carte</option>
+                  <option value="basic" selected="selected">Basic</option>
+                  <option value="plus" class="d-none" value="plus" disabled="true" hidden="true" aria-hidden="true">Plus
+                  </option>
+                  <option value="premier" class="d-none" value="premier" disabled="true" hidden="true"
+                    aria-hidden="true">Premier</option>
                 </select>
               </div>
             </div>
             <p class=" membership-card__heading d-none d-lg-block"></p>
             <div class="membership-card__price"><span>$</span>/year</div>
-            <img class="membership-card__card-image card-image" src= "-" alt="CAA Basic Membership Card">
+            <img class="membership-card__card-image card-image" src="-" alt="CAA Basic Membership Card">
             <div class="compare-cards__cta-container">
-              <a id="compare-cards__cta--basic" href="/membership/Join?Type=Basic" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships"></a>
+              <a id="compare-cards__cta--basic" href="/membership/Join?Type=Basic"
+                data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta"
+                data-gtm-cta-name="Join Now--/membership/compare-memberships"></a>
             </div>
           </div>
           <div class="col-6 col-md-4 col-lg-3">
-            <div class="input__select">
-            <!-- <div class="input__select d-lg-none"> -->
+            <div class="input__select d-lg-none">
               <div class="input__select-container">
                 <select id="plusSelectBox">
-                  <option value="plus" selected="selected">Plus</option>
                   <option value="aLaCarte">A La Carte</option>
+                  <option value="basic" class="d-none" value="plus" disabled="true" hidden="true" aria-hidden="true">
+                    Basic</option>
+                  <option value="plus" selected="selected">Plus</option>
+                  <option value="premier" class="d-none" value="premier" disabled="true" hidden="true"
+                    aria-hidden="true">Premier</option>
                 </select>
               </div>
             </div>
             <div class="rounded text-center p-1 bg-primary text-white">Best Value</div>
             <p class=" membership-card__heading d-none d-lg-block"></p>
             <div class="membership-card__price"><span>$</span>/year</div>
-            <img class="membership-card__card-image card-image" src= "-" alt="CAA Plus Membership Card">
+            <img class="membership-card__card-image card-image" src="-" alt="CAA Plus Membership Card">
             <div class="compare-cards__cta-container">
-              <a id="compare-cards__cta--basic" href="/membership/Join?Type=Basic" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships"></a>
+              <a id="compare-cards__cta--basic" href="/membership/Join?Type=Basic"
+                data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta"
+                data-gtm-cta-name="Join Now--/membership/compare-memberships"></a>
             </div>
             <div>
               <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
@@ -83,20 +100,25 @@
             </div>
           </div>
           <div class="d-none d-md-block col-6 col-md-4 col-lg-3">
-            <div class="input__select">
-              <!-- <div class="input__select d-lg-none"> -->
+            <div class="input__select d-lg-none">
               <div class="input__select-container">
                 <select id="premierSelectBox">
-                  <option value="premier" selected="selected">Premier</option>
                   <option value="aLaCarte">A La Carte</option>
+                  <option value="basic" class="d-none" value="plus" disabled="true" hidden="true" aria-hidden="true">
+                    Basic</option>
+                  <option value="plus" class="d-none" value="premier" disabled="true" hidden="true" aria-hidden="true">
+                    Plus</option>
+                  <option value="premier" selected="selected">Premier</option>
                 </select>
               </div>
             </div>
             <p class=" membership-card__heading d-none d-lg-block"></p>
             <div class="membership-card__price"><span>$</span>/year</div>
-            <img class="membership-card__card-image card-image" src= "-" alt="CAA Premier Membership Card">
+            <img class="membership-card__card-image card-image" src="-" alt="CAA Premier Membership Card">
             <div class="compare-cards__cta-container">
-              <a id="compare-cards__cta--basic" href="/membership/Join?Type=Basic" data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta" data-gtm-cta-name="Join Now--/membership/compare-memberships"></a>
+              <a id="compare-cards__cta--basic" href="/membership/Join?Type=Basic"
+                data-gtm-cta-position="Compare Card - 1" class="button button--primary compare-cards__cta"
+                data-gtm-cta-name="Join Now--/membership/compare-memberships"></a>
             </div>
             <div>
               <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike">
@@ -121,7 +143,8 @@
                     <rect x="9" transform="rotate(90 10 10)" class="st0" width="2" height="20"></rect>
                   </svg>
                 </a>
-                <div class="roadside accordion__content-container accordion__content-container--full accordion__content-container--open-ends accordion__content-container--visible">
+                <div
+                  class="roadside accordion__content-container accordion__content-container--full accordion__content-container--open-ends accordion__content-container--visible">
                   <div class="accordion__complex-row"></div>
                 </div>
               </div>
@@ -134,7 +157,8 @@
                     <rect x="9" transform="rotate(90 10 10)" class="st0" width="2" height="20"></rect>
                   </svg>
                 </a>
-                <div class="savings accordion__content-container accordion__content-container--full accordion__content-container--open-ends">
+                <div
+                  class="savings accordion__content-container accordion__content-container--full accordion__content-container--open-ends">
                   <div class="accordion__complex-row"></div>
                 </div>
               </div>
@@ -147,7 +171,8 @@
                     <rect x="9" transform="rotate(90 10 10)" class="st0" width="2" height="20"></rect>
                   </svg>
                 </a>
-                <div class="benefits accordion__content-container accordion__content-container--full accordion__content-container--open-ends">
+                <div
+                  class="benefits accordion__content-container accordion__content-container--full accordion__content-container--open-ends">
                   <div class="accordion__complex-row"></div>
                 </div>
               </div>
